schema/testdata/validation_identity_backlinks_invalid_relations_field/schema.keel
model CompanyEmployee {
    fields {
        identity Identity {
            @unique
            @relation(createdAt)
        }
    }
}
