schema/testdata/errors/identity_backlinks_invalid_relations_field.keel
model CompanyEmployee {
    fields {
        identity Identity {
            @unique
            //expect-error:23:32:RelationshipError:The field 'createdAt' on Identity must be of type CompanyEmployee in order to establish a relationship
            @relation(createdAt)
        }
    }
}
